--- a/kdecore/malloc/README
+++ b/kdecore/malloc/README
@@ -22,6 +22,8 @@ changes (against malloc-2.7.0):
 
 #define USE_MALLOC_LOCK
 #define INLINE __inline__
+#define USE_MEMCPY 0
+#define MMAP_CLEARS 1
 made all functions INLINE
 reordered all functions in order to avoid 'warning: `XYZ' declared inline after being called'
     especially moved the public_* ones at the end of the file
