--- a/doc/kspell/index.docbook
+++ b/doc/kspell/index.docbook
@@ -21,10 +21,10 @@
 <!-- TRANS:ROLES_OF_TRANSLATORS -->
 
 </authorgroup>
-<date>2001-12-30</date>
+<date>2002-02-24</date>
 <releaseinfo>1.00.00</releaseinfo>
 <abstract>
-<para>&kspell; is the spelling checker used by KDE applications such as &kwrite;,
+<para>&kspell; is the spelling checker used by KDE applications such as &kate;,
 &kmail;, and &kword;. It is a GUI frontend to <application>International ISpell</application>
 and <application>ASpell</application>.</para>
 </abstract>
