- implementation of printer testing in a more generic way - enabled printer testing in LPRng - added possibility to call KPrinter::printFiles without starting job viewer - updated TODO list with couple of fixes
svn path=/trunk/kdelibs/; revision=138554

--- a/kdeprint/ChangeLog
+++ b/kdeprint/ChangeLog
@@ -436,3 +436,6 @@ Since 2.2 release, Michael Goffioul <goffioul@imec.be>
     options dialog being shown
   * kicker extension: extension of the menu plugin to allow access to the
     server configuration tool as well as the "kprinter" utility.
+
+25/02/2002 Michael Goffioul <goffioul@imec.be>
+  * LPR: added printer testing support
