Incase people try to force it to build, maybe they read the README
svn path=/trunk/kdelibs/; revision=139032

--- a/kwallet/README
+++ b/kwallet/README
@@ -1,4 +1,12 @@
 
+###########################################################################
+This code is incomplete and not usable.  Please wait for a working version
+in KDE 3.1
+###########################################################################
+
+
+
+
 
 This directory consists of two libraries: kwalletbackend and kwalletclient
 
