--- a/kdoctools/customization/it/entities/underGPL.docbook
+++ b/kdoctools/customization/it/entities/underGPL.docbook
@@ -1,2 +1,2 @@
 <para>This program is licensed under the terms of the <ulink
-url="common/gpl-translated.html">GNU General Public License</ulink>.</para>
+url="common/gpl-license.html">GNU General Public License</ulink>.</para>
