- Fix (hopefully) all warnings during compilation - Basic support for LPRng printers installed using YaST   (only useful for printer listing)
svn path=/trunk/kdelibs/; revision=139718

--- a/kdeprint/ChangeLog
+++ b/kdeprint/ChangeLog
@@ -462,3 +462,4 @@ Since 2.2 release, Michael Goffioul <goffioul@imec.be>
     to parse the entire PPD file each time => much better)
   * kdeprintfax: added "-n" and "-f %email" by default for the Hylafax
     system
+  * general: various small UI improvements (suggested by Thomas)
