Disabling installation of libkab. It's now only used by kab2kabc which links it statically. From now on please use only kdelibs/kabc as KDE addressbook API.
svn path=/trunk/kdelibs/; revision=139942

--- a/kab/README
+++ b/kab/README
@@ -1,3 +1,11 @@
+Note: libkab is now obsolete. Please use libkabc in kdelibs/kabc. libkab is no
+longer installed. It's only needed for the conversion tool converting libkab
+data to libkabc data.
+
+Cornelius Schumacher, February 2002.
+
+
+
 The KDE addressbook
 ===================
 
