Translated some basic doc files
svn path=/trunk/kdelibs/; revision=140151

--- a/kdoctools/customization/nn/entities/install-intro.docbook
+++ b/kdoctools/customization/nn/entities/install-intro.docbook
@@ -1,5 +1,5 @@
 <!-- requires that packagename is defined in the documentation prologue -->
-<para>&kappname; is part of the &kde; project &kde-http;.</para>
+<para>&kappname; er ein del av &kde;-prosjektet &kde-http;.</para>
 
-<para>&kappname; can be found in the &package; package on 
-&kde-ftp;, the main &FTP; site of the &kde; project.</para>
+<para>&kappname; finn du i &package;-pakken på
+&kde-ftp;, hovud-&FTP;-en til &kde;-prosjektet.</para>
