--- a/kdoctools/customization/nn/entities/help-menu.docbook
+++ b/kdoctools/customization/nn/entities/help-menu.docbook
@@ -5,12 +5,12 @@
 <shortcut>
 <keycombo action="simul"><keycap>F1</keycap></keycombo>
 </shortcut>
-<guimenu>Help</guimenu>
-<guimenuitem>Contents...</guimenuitem>
+<guimenu>Hjelp</guimenu>
+<guimenuitem>Innhald ...</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Invokes the KDE Help system</action> starting at the
-&kappname; help pages. (this document).</para></listitem>
+<listitem><para><action>Startar hjelpesystemet i KDE</action> ved hjelpesidene 
+til &kappname; (dette dokumentet).</para></listitem>
 </varlistentry>
 
 <varlistentry>
@@ -18,41 +18,40 @@
 <shortcut>
 <keycombo action="simul">&Shift;<keycap>F1</keycap></keycombo>
 </shortcut>
-<guimenu>Help</guimenu>
-<guimenuitem>What's This?</guimenuitem>
+<guimenu>Hjelp</guimenu>
+<guimenuitem>Kva er dette?</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Changes the mouse cursor to a combination arrow and
-question mark.</action>  Clicking on items within &kappname; will open a help
-window (if one exists for the particular item) explaining the item's
-function.</para></listitem>
+<listitem><para><action>Endrar musepeikaren til ei pil med 
+spørjeteikn.</action>  Når du klikkar på element i &kappname;, får du sjå ei 
+hjelperute (dersom det finst) med informasjon om elementet.</para></listitem>
 </varlistentry>
 
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>Report Bug...</guimenuitem>
+<guimenu>Hjelp</guimenu>
+<guimenuitem>Rapporter feil ...</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>Opens the Bug report dialog</action> where you can
-report a bug or request a <quote>wishlist</quote> feature.</para></listitem>
+<listitem><para><action>Opnar dialogen for feilrapport</action> der du kan 
+rapportera om feil eller senda inn ønskje om nye funksjonar.</para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>About &kappname;</guimenuitem>
+<guimenu>Hjelp</guimenu>
+<guimenuitem>Om &kappname;</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This will display version and author
-information.</action></para></listitem>
+<listitem><para><action>Viser informasjon om programversjon og 
+utviklarar.</action></para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>About KDE</guimenuitem>
+<guimenu>Hjelp</guimenu>
+<guimenuitem>Om KDE</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This displays the KDE version and other basic
-information.</action></para></listitem>
+<listitem><para><action>Viser KDE-versjonen og annan grunnleggjande 
+informasjon.</action></para></listitem>
 </varlistentry>
 </variablelist>
