--- a/kdoctools/customization/nn/entities/install-compile.docbook
+++ b/kdoctools/customization/nn/entities/install-compile.docbook
@@ -1,12 +1,12 @@
-<para>In order to compile and install &kappname; on your system, type the
-following in the base directory of the &kappname; distribution:</para>
+<para>For å kompilera og installera &kappanme; på maskina, må du utføra 
+dei følgjande kommandoane i basekatalogen til &kappname;:</para>
 
 <screen><prompt>%</prompt> <userinput><command>./configure</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command> install</userinput>
 </screen>
 
-<para>Since &kappname; uses <command>autoconf</command> and
-<command>automake</command> you should have no trouble compiling it. Should you
-run into problems please report them to the &kde; mailing lists.</para>
+<para>Sidan &kappname; brukar <command>autoconf</command> og
+<command>automake</command>, bør kompileringa gå greit. Dersom du får problem, 
+kan du rapportera dei til &kde;-e-postlistene.</para>
 
