--- a/kdoctools/customization/it/entities/update-doc.docbook
+++ b/kdoctools/customization/it/entities/update-doc.docbook
@@ -1,1 +1,5 @@
-<!-- to be filled in -->
+<!--<para>Questo documento potrebbe essere stato aggiornato dal momento della
+tua installazione.
+Controlla all'indirizzo <ulink
+url="http://docs.kde.org/page#&kappname;">http://docs.kde.org/page#&kappname;</ulink>
+se c'è una versione più aggiornata.</para> -->
