--- a/kdoctools/customization/it/entities/help-menu.docbook
+++ b/kdoctools/customization/it/entities/help-menu.docbook
@@ -5,12 +5,12 @@
 <shortcut>
 <keycombo action="simul"><keycap>F1</keycap></keycombo>
 </shortcut>
-<guimenu>Help</guimenu>
-<guimenuitem>Contents...</guimenuitem>
+<guimenu>Aiuto</guimenu>
+<guimenuitem>Indice...</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Invokes the KDE Help system</action> starting at the
-&kappname; help pages. (this document).</para></listitem>
+<listitem><para><action>Invoca il sistema di aiuto di KDE</action> direttamente alle pagine
+del manuale di &kappname; (questo documento).</para></listitem>
 </varlistentry>
 
 <varlistentry>
@@ -18,41 +18,41 @@
 <shortcut>
 <keycombo action="simul">&Shift;<keycap>F1</keycap></keycombo>
 </shortcut>
-<guimenu>Help</guimenu>
-<guimenuitem>What's This?</guimenuitem>
+<guimenu>Aiuto</guimenu>
+<guimenuitem>Che cos'è?</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Changes the mouse cursor to a combination arrow and
-question mark.</action>  Clicking on items within &kappname; will open a help
-window (if one exists for the particular item) explaining the item's
-function.</para></listitem>
+<listitem><para><action>Cambia il cursore del mouse in una freccia e un punto
+di domanda.</action> Se fai clic su un oggetto all'interno di &kappname; 
+si aprirà una finestra di aiuto (se ne esiste una per quel particolare oggetto)
+che spiega la funzione dell'oggetto in questione.</para></listitem>
 </varlistentry>
 
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>Report Bug...</guimenuitem>
+<guimenu>Aiuto</guimenu>
+<guimenuitem>Segnala un bug...</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>Opens the Bug report dialog</action> where you can
-report a bug or request a <quote>wishlist</quote> feature.</para></listitem>
+<listitem><para><action>Apre la finestra di segnalazione dei bug</action> dove
+puoi segnalare un bug oppure esprimere un <quote>desiderio</quote>.</para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>About &kappname;</guimenuitem>
+<guimenu>Aiuto</guimenu>
+<guimenuitem>Informazioni su &kappname;</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This will display version and author
-information.</action></para></listitem>
+<listitem><para><action>Mostra informazioni sulla versione e
+sull'autore.</action></para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>About KDE</guimenuitem>
+<guimenu>Aiuto</guimenu>
+<guimenuitem>Informazioni su KDE</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This displays the KDE version and other basic
-information.</action></para></listitem>
+<listitem><para><action>Mostra la versione di KDE e altre informazioni
+di base.</action></para></listitem>
 </varlistentry>
 </variablelist>
