--- a/kdoctools/customization/it/entities/install-compile.docbook
+++ b/kdoctools/customization/it/entities/install-compile.docbook
@@ -1,12 +1,13 @@
-<para>In order to compile and install &kappname; on your system, type the
-following in the base directory of the &kappname; distribution:</para>
+<para>Per compilare e installare &kappname; sul tuo sistema, immetti i
+seguenti comandi nella directory di base della distribuzione di &kappname;:</para>
 
 <screen><prompt>%</prompt> <userinput><command>./configure</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command> install</userinput>
 </screen>
 
-<para>Since &kappname; uses <command>autoconf</command> and
-<command>automake</command> you should have no trouble compiling it. Should you
-run into problems please report them to the &kde; mailing lists.</para>
+<para>Dato che &kappname; usa <command>autoconf</command> e
+<command>automake</command>, non dovresti incontrare dei problemi per
+compilarlo. Se si verificasse qualche problema,
+per piacere segnalalo alle mailing list di &kde;.</para>
 
