--- a/kdoctools/customization/it/entities/install-intro.docbook
+++ b/kdoctools/customization/it/entities/install-intro.docbook
@@ -1,6 +1,6 @@
 <!-- requires that packagename is defined in the documentation prologue
  -->
-<para>&kappname; is part of the &kde; project &kde-http;.</para>
+<para>&kappname; fa parte del progetto &kde; &kde-http;.</para>
 
-<para>&kappname; can be found in the &package; package on &kde-ftp;, 
-the main &FTP; site of the &kde; project.</para>
+<para>Puoi trovare &kappname; nel pacchetto &package; all'indirizzo &kde-ftp;, 
+il sito &FTP; principale del progetto &kde;.</para>
