--- a/kdoctools/customization/it/entities/underArtisticLicense.docbook
+++ b/kdoctools/customization/it/entities/underArtisticLicense.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
+<para>Questo programma è concesso in licenza sotto i termini della <ulink
 url="common/artistic-license.html">Artistic License</ulink>.</para>
