--- a/kdoctools/customization/it/entities/underBSDLicense.docbook
+++ b/kdoctools/customization/it/entities/underBSDLicense.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
+<para>Questo programma è concesso in licenza sotto i termini della <ulink
 url="common/bsd-license.html">BSD License</ulink>.</para>
