--- a/kdoctools/customization/it/entities/underX11License.docbook
+++ b/kdoctools/customization/it/entities/underX11License.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
+<para>Questo programma è concesso in licenza sotto i termini della <ulink
 url="common/x11-license.html">X11 License</ulink>.</para>
