--- a/kdoctools/customization/pt/entities/install-intro.docbook
+++ b/kdoctools/customization/pt/entities/install-intro.docbook
@@ -1,5 +1,4 @@
 <!-- requires that packagename is defined in the documentation prologue -->
-<para>&kappname; is part of the &kde; project &kde-http;.</para>
+<para>&kappname; faz parte do projecto &kde; &kde-http;.</para>
 
-<para>&kappname; can be found in the &package; package on &kde-ftp;, the main &FTP; site of the &kde;
-project.</para>
+<para>&kappname; pode ser encontrado no pacote &package; em &kde-ftp;, o servidor principal de &FTP; do projecto &kde;.</para>
