--- a/kdoctools/customization/pt/entities/install-compile.docbook
+++ b/kdoctools/customization/pt/entities/install-compile.docbook
@@ -1,12 +1,10 @@
-<para>In order to compile and install &kappname; on your system, type the
-following in the base directory of the &kappname; distribution:</para>
+<para>Para poderes compilar e instalar o &kappname; no teu sistema, escreve o seguinte na directoria de base da distribuição do &kappname;:</para>
 
 <screen><prompt>%</prompt> <userinput><command>./configure</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command> install</userinput>
 </screen>
 
-<para>Since &kappname; uses <command>autoconf</command> and
-<command>automake</command> you should have no trouble compiling it. Should you
-run into problems please report them to the &kde; mailing lists.</para>
+<para>Dado que o &kappname; usa o <command>autoconf</command> e o
+<command>automake</command> não deves ter problemas a compilá-lo. Se os tiveres comunica-os para as 'mailing lists' do &kde;.</para>
 
