Converted to British English
svn path=/trunk/kdelibs/; revision=142493

--- a/kdoctools/customization/en-GB/entities/help-menu.docbook
+++ b/kdoctools/customization/en-GB/entities/help-menu.docbook
@@ -34,7 +34,7 @@ function.</para></listitem>
 <guimenu>Help</guimenu>
 <guimenuitem>Report Bug...</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>Opens the Bug report dialog</action> where you can
+<listitem><para><action>Opens the Bug report dialogue</action> where you can
 report a bug or request a <quote>wishlist</quote> feature.</para></listitem>
 </varlistentry>
 
